[stdevMac] refs #2031 Add some Paths to Swagger
